--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -93,11 +93,11 @@ input {
 
 body {
   
-  background-size: 390px 844px; /* Dimensões do iPhone 14 */
+  background-size: 100% 100%;/* Dimensões do iPhone 14 */
   background-position: center; /* Para centralizar a imagem */
   background-repeat: no-repeat; /* Para evitar repetição da imagem */
   background-attachment: fixed; /* Para manter a imagem fixa */
-  background-image: url(/assets/img/Design\ sem\ nome.png);
+  background-image: url(/assets/img/CAPA\ SITE2.0.png);
  /* background-color: var(--body-color);*/
   color: var(--text-color);
 }
